add kzg proofs and blobs to BlockContents and SignedblockContents